Discord fix and cleanup

--- a/announcements/compitition-begins.html
+++ b/announcements/compitition-begins.html
@@ -77,7 +77,7 @@
 											<li>System description papers are <strong>mandatory</strong> for final ranking inclusion</li>
 											<li>Paper submission deadline: February 2026 (exact date TBD)</li>
 											<li>Results will be announced after the evaluation period ends</li>
-											<li>Questions? Join our <a href="https://discord.gg/XpJNRXWt" target="_blank">Discord</a> or contact organizers</li>
+											<li>Questions? Join our <a href="https://discord.gg/K5uhEF2jPN" target="_blank">Discord</a> or contact organizers</li>
 										</ul>
 									</div>
 
@@ -100,18 +100,6 @@
 										<li><a href="../participation.html" class="button">View Competition Rules</a></li>
 									</ul>
 
-								</section>
-								<!--2-->
-								<section>
-									<header class="main">
-										<h1>More Languages Will Be Releases Soon - Stay Tuned!</h1>
-										<p>Posted on September 22, 2025 at 14:30 UTC</p>
-									</header>
-
-									<p>We are pleased to announce that the training dataset will be released shortly.
-										Details regarding access and usage guidelines will be provided in the upcoming release notes.</p>
-
-									
 								</section>
 
 							<!-- Footer -->
