--- a/announcements/data-released-HGI.html
+++ b/announcements/data-released-HGI.html
@@ -19,7 +19,7 @@
 								<header id="header">
 									<a href="../" class="logo"><strong>POLAR</strong> @ SemEval-2026</a>
 									<ul class="icons">
-										<li><a href="https://discord.gg/XpJNRXWt" class="icon brands fa-discord"><span class="label">Discord</span></a></li>
+										<li><a href="https://discord.gg/K5uhEF2jPN" class="icon brands fa-discord"><span class="label">Discord</span></a></li>
 										<li><a href="https://groups.google.com/g/polarization-semeval-2026-participants" class="icon solid fa-envelope"><span class="label">Google Group</span></a></li>
 										<li><a href="https://github.com/Polar-SemEval/trial-data" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 									</ul>
@@ -85,7 +85,7 @@
 											<li>System description papers are <strong>mandatory</strong> for final ranking inclusion</li>
 											<li>Paper submission deadline: February 2026 (exact date TBD)</li>
 											<li>Results will be announced after the evaluation period ends</li>
-											<li>Questions? Join our <a href="https://discord.gg/XpJNRXWt" target="_blank">Discord</a> or contact organizers</li>
+											<li>Questions? Join our <a href="https://discord.gg/K5uhEF2jPN" target="_blank">Discord</a> or contact organizers</li>
 										</ul>
 									</div>
 
@@ -108,18 +108,6 @@
 										<li><a href="../participation.html" class="button">View Competition Rules</a></li>
 									</ul>
 
-								</section>
-								<!--2-->
-								<section>
-									<header class="main">
-										<h1>Other Languages' Data Release Soon - Stay Tuned!</h1>
-										<p>Posted on October 04, 2025 at 09:00 UTC</p>
-									</header>
-
-									<p>We are pleased to announce that the training dataset will be released shortly.
-										Details regarding access and usage guidelines will be provided in the upcoming release notes.</p>
-
-									
 								</section>
 
 							<!-- Footer -->
