--- a/announcements/data-released-new.html
+++ b/announcements/data-released-new.html
@@ -74,7 +74,7 @@
 											<li>System description papers are <strong>mandatory</strong> for final ranking inclusion</li>
 											<li>Paper submission deadline: February 2026 (exact date TBD)</li>
 											<li>Results will be announced after the evaluation period ends</li>
-											<li>Questions? Join our <a href="https://discord.gg/XpJNRXWt" target="_blank">Discord</a> or contact organizers</li>
+											<li>Questions? Join our <a href="https://discord.gg/K5uhEF2jPN" target="_blank">Discord</a> or contact organizers</li>
 										</ul>
 									</div>
 
@@ -97,18 +97,6 @@
 										<li><a href="../participation.html" class="button">View Competition Rules</a></li>
 									</ul>
 
-								</section>
-								<!--2-->
-								<section>
-									<header class="main">
-										<h1>Other Languages' Data Release Soon - Stay Tuned!</h1>
-										<p>Posted on September 20, 2025 at 18:00 UTC</p>
-									</header>
-
-									<p>We are pleased to announce that the training dataset will be released shortly.
-										Details regarding access and usage guidelines will be provided in the upcoming release notes.</p>
-
-									
 								</section>
 
 							<!-- Footer -->
