--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 								<header id="header">
 									<a href="/" class="logo"><strong>POLAR</strong> @ SemEval-2026</a>
 									<ul class="icons">
-										<li><a href="https://discord.gg/XpJNRXWt" class="icon brands fa-discord"><span class="label">Discord</span></a></li>
+										<li><a href="https://discord.gg/K5uhEF2jPN" class="icon brands fa-discord"><span class="label">Discord</span></a></li>
 										<li><a href="https://groups.google.com/g/polarization-semeval-2026-participants" class="icon solid fa-envelope"><span class="label">Google Group</span></a></li>
 										<li><a href="https://github.com/Polar-SemEval/trial-data" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 									</ul>
