--- a/resources.html
+++ b/resources.html
@@ -19,7 +19,7 @@
 								<header id="header">
 									<a href="/" class="logo"><strong>POLAR</strong> @ SemEval-2026</a>
 									<ul class="icons">
-										<li><a href="https://discord.gg/XpJNRXWt" class="icon brands fa-discord"><span class="label">Discord</span></a></li>
+										<li><a href="https://discord.gg/K5uhEF2jPN" class="icon brands fa-discord"><span class="label">Discord</span></a></li>
 										<li><a href="https://groups.google.com/g/polarization-semeval-2026-participants" class="icon solid fa-envelope"><span class="label">Google Group</span></a></li>
 										<li><a href="https://github.com/Polar-SemEval/trial-data" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 									</ul>
@@ -83,7 +83,7 @@
 									<h2>Technical Support</h2>
 									<p>For technical questions and support:</p>
 									<ul>
-										<li>Join our <a href="https://discord.gg/XpJNRXWt" target="_blank">Discord server</a> for real-time discussions</li>
+										<li>Join our <a href="https://discord.gg/K5uhEF2jPN" target="_blank">Discord server</a> for real-time discussions</li>
 										<li>Subscribe to our <a href="https://groups.google.com/g/polarization-semeval-2026-participants" target="_blank">Google Group</a> for important announcements</li>
 										<li>Contact organizers directly through our <a href="communication.html">communication channels</a></li>
 									</ul>
