--- a/404.html
+++ b/404.html
@@ -19,7 +19,7 @@
 								<header id="header">
 									<a href="/" class="logo"><strong>POLAR</strong> @ SemEval-2026</a>
 									<ul class="icons">
-										<li><a href="https://discord.gg/XpJNRXWt" class="icon brands fa-discord"><span class="label">Discord</span></a></li>
+										<li><a href="https://discord.gg/K5uhEF2jPN" class="icon brands fa-discord"><span class="label">Discord</span></a></li>
 										<li><a href="https://groups.google.com/g/polarization-semeval-2026-participants" class="icon solid fa-envelope"><span class="label">Google Group</span></a></li>
 										<li><a href="https://github.com/Polar-SemEval/trial-data" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 									</ul>
@@ -86,7 +86,7 @@
 									<h2>Need Help?</h2>
 									<p>If you believe this page should exist or you're experiencing technical difficulties:</p>
 									<ul>
-										<li>Join our <a href="https://discord.gg/XpJNRXWt" target="_blank">Discord server</a> for community support</li>
+										<li>Join our <a href="https://discord.gg/K5uhEF2jPN" target="_blank">Discord server</a> for community support</li>
 										<li>Contact organizers via our <a href="https://groups.google.com/g/polarization-semeval-2026-organisers" target="_blank">Google Group</a></li>
 										<li>Check our <a href="communication.html">communication channels</a> for more ways to reach us</li>
 									</ul>
