--- a/announcements/data-released.html
+++ b/announcements/data-released.html
@@ -33,14 +33,11 @@
 										<p>Posted on September 12, 2025 at 16:45 UTC</p>
 									</header>
 
-									<p>We have released the training and development datasets for six languages for Subtask-1: Amharic (amh), Arabic (arb), Chinese (zho), English (eng), Spanish (spa), and Urdu (urd). More languages are on the way, and we’ll be updating the website with release information over the next few days.</p>
+									<p>We have released the training and development datasets for six languages for Subtask 1: Amharic (amh), Arabic (arb), Chinese (zho), English (eng), Spanish (spa), and Urdu (urd). More languages are on the way, and we’ll be updating the website with release information over the next few days.</p>
 									<p>
 										The competition website for 
 										<a href="https://www.codabench.org/competitions/10522/" target="_blank" rel="noopener noreferrer">Subtask 1</a>, 
-										is now live. 
-										We have released the training and development datasets for the following languages: 
-										Amharic (amh), Arabic (arb), Chinese (zho), English (eng), Spanish (spa), and Urdu (urd). 
-										More languages are on the way, and we will share announcements as soon as they are released.
+										is now live. You can access the data by joining the competition on CodaBench.
 									</p>									  
 									  
 									<h2>Key Information for Participants</h2>
@@ -75,7 +72,7 @@
 											<li>System description papers are <strong>mandatory</strong> for final ranking inclusion</li>
 											<li>Paper submission deadline: February 2026 (exact date TBD)</li>
 											<li>Results will be announced after the evaluation period ends</li>
-											<li>Questions? Join our <a href="https://discord.gg/XpJNRXWt" target="_blank">Discord</a> or contact organizers</li>
+											<li>Questions? Join our <a href="https://discord.gg/K5uhEF2jPN" target="_blank">Discord</a> or contact organizers</li>
 										</ul>
 									</div>
 
