--- a/faq.html
+++ b/faq.html
@@ -33,8 +33,14 @@
 
 									<h2>Participation Questions</h2>
 
+									<h3>Do I have to participate in all 3 subtasks?</h3>
+									<p>No. You may choose one or more subtasks.</p>
+
 									<h3>Do I have to participate in all languages for a given subtask?</h3>
 									<p>No. You may choose one or more languages.</p>
+
+									<h3>When will all datasets for the 21 languages be released?</h3>
+									<p>We will announce the release of each dataset as it becomes available. Currently, datasets for <strong>9 languages</strong> have been released, and the remaining ones will follow soon.</p>
 
 									<h3>How will you verify my submitted model?</h3>
 									<p>To be included in the final team rankings, participants must submit a system description paper detailing their approach and methodology. This ensures transparency and scientific integrity.</p>
