--- a/organizers.html
+++ b/organizers.html
@@ -386,18 +386,24 @@
 											</div>
 										  </div>
 										
+										  <div class="organizer-card">
+											<div class="organizer-info">
+												<h4><a href="https://abumafrim.github.io/" target="_blank">Dr. Idris Abdulmumin</a></h4>
+												<p>University of Pretoria (South Africa)</p>
+											</div>
+										</div>
 										
 										<div class="organizer-card">
 											<div class="organizer-info">
-												<h4><a href="http://isahmadbbr.github.io/" target="_blank">Dr. Ibrahim Said Ahmad</a></h4>
-												<p>Bayero University Kano (Nigeria) & Northeastern University (USA)</p>
+												<h4><a href="https://github.com/grantzyr" target="_blank">Yiran Zhang</a></h4>
+												<p>Macquarie University (Australia)</p>
 											</div>
 										</div>
 
 										<div class="organizer-card">
 											<div class="organizer-info">
-												<h4><a href="https://abumafrim.github.io/" target="_blank">Dr. Idris Abdulmumin</a></h4>
-												<p>University of Pretoria (South Africa)</p>
+												<h4><a href="http://isahmadbbr.github.io/" target="_blank">Dr. Ibrahim Said Ahmad</a></h4>
+												<p>Bayero University Kano (Nigeria) & Northeastern University (USA)</p>
 											</div>
 										</div>
 
