--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<!-- Latest compiled and minified CSS -->
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+
+		<!-- Optional theme -->
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap-theme.min.css" integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
+
+		<!-- Latest compiled and minified JavaScript -->
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
 		<style>
 			.actions-column {
 				display: flex;
@@ -48,22 +56,35 @@
 											Task 9</h1>
 											<h3>Detecting Multilingual, Multicultural and Multievent Online Polarization</h3>
 										</header>
-										<h3>Task Introduction</h3>
-										<p>
-											Online polarization is the sharp division and hostility between social, political, or identity groups. Online polarization has become a growing concern, as it often precedes hate speech, offensive discourse, and social fragmentation. In its extreme form,  polarization can create a fragmented society where individuals or groups are unable to engage in constructive dialogue, leading to a breakdown in community cohesion and social unity. Thus, detecting and mitigating polarization before it escalates is crucial to ensure safer and more inclusive online spaces.
-											For the first time, we introduce a polarization task, aimed at detection of online polarization. The task focuses on the identification of multilingual, multicultural and multievent polarization, capturing the complexity of online discourse across diverse contexts. 
-											Participants may participate in one or more of the following three sub-tasks:  Polarization Detection, Polarization Type Classification and Polarization Manifestation Identification
-											Languages Covered 
-											The task covers the following 21 languages: Amharic, Arabic, Bengali, Burmese, Chinese, English, German, Hausa, Hindi, Italian, Khmer, Nepali, Odia, Persian, Punjabi, Russian, Spanish, Swahili, Telugu, Turkish, and Urdu.
-										</p>
-										<ul class="actions actions-column">
-											<li><a href="tasks.html" class="button big">To Know more about subtasks & trial data Click Here</a></li>
-										  </ul>
+										<div class="container">
+											<div class="row">
+												<div class="col-9">
+													<h3>Task Introduction</h3>
+													<p>
+														Online polarization is the sharp division and hostility between social, political, or identity groups. Online polarization has become a growing concern, as it often precedes hate speech, offensive discourse, and social fragmentation. In its extreme form,  polarization can create a fragmented society where individuals or groups are unable to engage in constructive dialogue, leading to a breakdown in community cohesion and social unity. Thus, detecting and mitigating polarization before it escalates is crucial to ensure safer and more inclusive online spaces.
+														For the first time, we introduce a polarization task, aimed at detection of online polarization. The task focuses on the identification of multilingual, multicultural and multievent polarization, capturing the complexity of online discourse across diverse contexts. 
+														Participants may participate in one or more of the following three sub-tasks:  Polarization Detection, Polarization Type Classification and Polarization Manifestation Identification
+														Languages Covered 
+														The task covers the following 22 languages: Amharic, Arabic, Bengali, Burmese, Chinese, English, German, Hausa, Hindi, Italian, Khmer, Nepali, Odia, Persian, Polish, Punjabi, Russian, Spanish, Swahili, Telugu, Turkish, and Urdu.
+													</p>
+													<ul class="actions actions-column">
+														<li><a href="tasks.html" class="button big">To Know more about subtasks & trial data Click Here</a></li>
+													</ul>
+
+												</div>
+												<div class="col-3">
+													<img src="images/polar-logo.png" alt="POLAR Logo" style="max-width: 100%; height: auto;">
+
+												</div>
+
+											</div>
+
+
+										</div>
+
 										  
 									</div>
-									<span class="image object">
-										<img src="assets/POLAR.png" alt="POLAR Task Banner" />
-									</span>
+
 								</section>
 
 							<!-- Section -->
@@ -75,7 +96,7 @@
 										<article>
 											<span class="icon solid fa-comments"></span>
 											<div class="content">
-												<h3>21 Languages</h3>
+												<h3>22 Languages</h3>
 												<p>Amharic,
 													Arabic,
 													Bengali,
@@ -90,6 +111,7 @@
 													Nepali,
 													Odia,
 													Persian,
+													Polish,
 													Punjabi,
 													Russian,
 													Spanish,
