--- a/tasks.html
+++ b/tasks.html
@@ -48,7 +48,7 @@
 									<hr class="major" />
 
 									<h2>Languages Covered</h2>
-									<p>The task covers <strong>21 languages</strong> across different cultural and geographical contexts:</p>
+									<p>The task covers <strong>22 languages</strong> across different cultural and geographical contexts:</p>
 									<p>Amharic,
 										Arabic,
 										Bengali,
@@ -63,6 +63,7 @@
 										Nepali,
 										Odia,
 										Persian,
+										Polish,
 										Punjabi,
 										Russian,
 										Spanish,
