--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
 
 							<!-- Banner -->
 								<section id="banner">
-									<div class="content">
+									<div class="content container">
+											<div class="row">
+												<div class="col-9">
 										<header>
 											<h1>POLAR @ SemEval-2026<br />
 											Task 9</h1>
 											<h3>Detecting Multilingual, Multicultural and Multievent Online Polarization</h3>
 										</header>
-										<div class="container">
-											<div class="row">
-												<div class="col-9">
+
 													<h3>Task Introduction</h3>
 													<p>
 														Online polarization is the sharp division and hostility between social, political, or identity groups. Online polarization has become a growing concern, as it often precedes hate speech, offensive discourse, and social fragmentation. In its extreme form,  polarization can create a fragmented society where individuals or groups are unable to engage in constructive dialogue, leading to a breakdown in community cohesion and social unity. Thus, detecting and mitigating polarization before it escalates is crucial to ensure safer and more inclusive online spaces.
