--- a/index.html
+++ b/index.html
@@ -50,41 +50,32 @@
 
 							<!-- Banner -->
 								<section id="banner">
-									<div class="content container">
-											<div class="row">
-												<div class="col-9">
+									<div class="content">
 										<header>
 											<h1>POLAR @ SemEval-2026<br />
 											Task 9</h1>
 											<h3>Detecting Multilingual, Multicultural and Multievent Online Polarization</h3>
 										</header>
-
-													<h3>Task Introduction</h3>
-													<p>
-														Online polarization is the sharp division and hostility between social, political, or identity groups. Online polarization has become a growing concern, as it often precedes hate speech, offensive discourse, and social fragmentation. In its extreme form,  polarization can create a fragmented society where individuals or groups are unable to engage in constructive dialogue, leading to a breakdown in community cohesion and social unity. Thus, detecting and mitigating polarization before it escalates is crucial to ensure safer and more inclusive online spaces.
-														For the first time, we introduce a polarization task, aimed at detection of online polarization. The task focuses on the identification of multilingual, multicultural and multievent polarization, capturing the complexity of online discourse across diverse contexts. 
-														Participants may participate in one or more of the following three sub-tasks:  Polarization Detection, Polarization Type Classification and Polarization Manifestation Identification
-														Languages Covered 
-														The task covers the following 22 languages: Amharic, Arabic, Bengali, Burmese, Chinese, English, German, Hausa, Hindi, Italian, Khmer, Nepali, Odia, Persian, Polish, Punjabi, Russian, Spanish, Swahili, Telugu, Turkish, and Urdu.
-													</p>
-													<ul class="actions actions-column">
-														<li><a href="tasks.html" class="button big">To Know more about subtasks & trial data Click Here</a></li>
-													</ul>
-
-												</div>
-												<div class="col-3">
-													<img src="images/polar-logo.png" alt="POLAR Logo" style="max-width: 100%; height: auto;">
-
-												</div>
-
-											</div>
-
+										<div class="container">
+											<h3>Task Introduction</h3>
+											<p>
+												Online polarization is the sharp division and hostility between social, political, or identity groups. Online polarization has become a growing concern, as it often precedes hate speech, offensive discourse, and social fragmentation. In its extreme form,  polarization can create a fragmented society where individuals or groups are unable to engage in constructive dialogue, leading to a breakdown in community cohesion and social unity. Thus, detecting and mitigating polarization before it escalates is crucial to ensure safer and more inclusive online spaces.
+												For the first time, we introduce a polarization task, aimed at detection of online polarization. The task focuses on the identification of multilingual, multicultural and multievent polarization, capturing the complexity of online discourse across diverse contexts. 
+												Participants may participate in one or more of the following three sub-tasks:  Polarization Detection, Polarization Type Classification and Polarization Manifestation Identification
+												Languages Covered 
+												The task covers the following 22 languages: Amharic, Arabic, Bengali, Burmese, Chinese, English, German, Hausa, Hindi, Italian, Khmer, Nepali, Odia, Persian, Polish, Punjabi, Russian, Spanish, Swahili, Telugu, Turkish, and Urdu.
+											</p>
+											<ul class="actions actions-column">
+												<li><a href="tasks.html" class="button big">To Know more about subtasks & trial data Click Here</a></li>
+											</ul>
 
 										</div>
 
 										  
 									</div>
-
+									<span class="image object">
+										<img src="assets/POLAR.png" alt="POLAR Task Banner" />
+									</span>
 								</section>
 
 							<!-- Section -->
