--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 										  
 									</div>
 									<span class="image object">
-										<img src="assets/POLAR.png" alt="POLAR Task Banner" />
+										<!-- <img src="assets/POLAR.png" alt="POLAR Task Banner" /> -->
 									</span>
 								</section>
 
