--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 										  </ul>
 										  
 									</div>
-									<span class="image object">
-										<!-- <img src="assets/POLAR.png" alt="POLAR Task Banner" /> -->
-									</span>
+									<!-- <span class="image object">
+										<img src="assets/POLAR.png" alt="POLAR Task Banner" />
+									</span> -->
 								</section>
 
 							<!-- Section -->
