--- a/index.html
+++ b/index.html
@@ -50,8 +50,12 @@
 											The task covers the following 22 languages: Amharic, Arabic, Bengali, Burmese, Chinese, English, German, Hausa, Hindi, Italian, Khmer, Nepali, Odia, Persian, Polish, Punjabi, Russian, Spanish, Swahili, Telugu, Turkish, and Urdu.
 										</p>
 										<ul class="actions actions-column">
-											<li><a href="tasks.html" class="button big">To Know more about subtasks & trial data Click Here</a></li>
-										  </ul>
+											<li><a href="tasks.html" class="button big">Learn More About the Subtasks</a></li>
+											<li><a href="https://www.codabench.org/competitions/10522" class="button big" target="_blank">Go to Subtask-1 Competition</a></li>
+											<li><a href="https://www.codabench.org/competitions/10669/" class="button big" target="_blank">Go to Subtask-2 Competition</a></li>
+											<li><a href="https://www.codabench.org/competitions/10674/" class="button big" target="_blank">Go to Subtask-3 Competition</a></li>
+
+										</ul>
 										  
 									</div>
 									<!-- <span class="image object">
