--- a/index.html
+++ b/index.html
@@ -43,10 +43,17 @@
 										</header>
 										<h3>Task Introduction</h3>
 										<p>
-											Online polarization is the sharp division and hostility between social, political, or identity groups. Online polarization has become a growing concern, as it often precedes hate speech, offensive discourse, and social fragmentation. In its extreme form,  polarization can create a fragmented society where individuals or groups are unable to engage in constructive dialogue, leading to a breakdown in community cohesion and social unity. Thus, detecting and mitigating polarization before it escalates is crucial to ensure safer and more inclusive online spaces.
+											Online polarization is the sharp division and hostility between social, political, or identity groups. Online polarization has become a growing concern, as it often precedes hate speech, offensive discourse, and social fragmentation. 
+										</p>
+										<p>
+											In its extreme form,  polarization can create a fragmented society where individuals or groups are unable to engage in constructive dialogue, leading to a breakdown in community cohesion and social unity. Thus, detecting and mitigating polarization before it escalates is crucial to ensure safer and more inclusive online spaces.
+										</p>
+										<p>
 											For the first time, we introduce a polarization task, aimed at detection of online polarization. The task focuses on the identification of multilingual, multicultural and multievent polarization, capturing the complexity of online discourse across diverse contexts. 
 											Participants may participate in one or more of the following three sub-tasks:  Polarization Detection, Polarization Type Classification and Polarization Manifestation Identification
-											Languages Covered 
+										</p>
+										<p>	
+											<strong>Languages Covered</strong> 
 											The task covers the following 22 languages: Amharic, Arabic, Bengali, Burmese, Chinese, English, German, Hausa, Hindi, Italian, Khmer, Nepali, Odia, Persian, Polish, Punjabi, Russian, Spanish, Swahili, Telugu, Turkish, and Urdu.
 										</p>
 										<ul class="actions actions-column">
