--- a/index.html
+++ b/index.html
@@ -50,10 +50,11 @@
 										</p>
 										<p>
 											For the first time, we introduce a polarization task, aimed at detection of online polarization. The task focuses on the identification of multilingual, multicultural and multievent polarization, capturing the complexity of online discourse across diverse contexts. 
-											Participants may participate in one or more of the following three sub-tasks:  Polarization Detection, Polarization Type Classification and Polarization Manifestation Identification
+											Participants may participate in one or more of the following three sub-tasks:  Polarization Detection, Polarization Type Classification and Polarization Manifestation Identification.
 										</p>
 										<p>	
 											<strong>Languages Covered</strong> 
+											<br>
 											The task covers the following 22 languages: Amharic, Arabic, Bengali, Burmese, Chinese, English, German, Hausa, Hindi, Italian, Khmer, Nepali, Odia, Persian, Polish, Punjabi, Russian, Spanish, Swahili, Telugu, Turkish, and Urdu.
 										</p>
 										<ul class="actions actions-column">
@@ -271,6 +272,7 @@
 										<h2>Menu</h2>
 									</header>
 									<ul>
+										<li><img src="assets/POLAR.png" alt="POLAR Task Banner" /></li>
 										<li><a href="/">Homepage</a></li>
 										<li><a href="tasks.html">Subtasks</a></li>
 										<li><a href="participation.html">How to Participate</a></li>
