--- a/index.html
+++ b/index.html
@@ -269,10 +269,10 @@
 							<!-- Menu -->
 								<nav id="menu">
 									<header class="major">
+										<img src="assets/POLAR.png" alt="POLAR Task Banner" />
 										<h2>Menu</h2>
 									</header>
 									<ul>
-										<li><img src="assets/POLAR.png" alt="POLAR Task Banner" /></li>
 										<li><a href="/">Homepage</a></li>
 										<li><a href="tasks.html">Subtasks</a></li>
 										<li><a href="participation.html">How to Participate</a></li>
