--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 							<!-- Menu -->
 								<nav id="menu">
 									<header class="major">
-										<img src="assets/POLAR.png" alt="POLAR Task Banner" height="30px" width="30px" />
+										<img src="assets/POLAR.png" alt="POLAR Task Banner" height="30" width="30" />
 										<h2>Menu</h2>
 									</header>
 									<ul>
