--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 				gap: 10px; /* space between buttons */
 				align-items: flex-start; /* or center if you want them centered */
 			}
+			.centered-image {
+				display: block; /* Makes the image a block-level element */
+				margin: 0 auto; /* Centers the block-level image horizontally */
+				}
 		</style>
 	</head>
 	<body class="is-preload">
@@ -268,7 +272,7 @@
 
 							<!-- Menu -->
 								<nav id="menu">
-									<img src="assets/POLAR.png" alt="POLAR Task Banner" height="200" width="200" />
+									<img class="centered-image" src="assets/POLAR.png" alt="POLAR Task Banner" height="200" width="200"/>
 									<header class="major">
 										<h2>Menu</h2>
 									</header>
