--- a/announcements/index.html
+++ b/announcements/index.html
@@ -33,6 +33,11 @@
 									</header>
 
 									<style>
+									.centered-image {
+										display: block; /* Makes the image a block-level element */
+										margin: 0 auto; /* Centers the block-level image horizontally */
+										}
+	
 									.announcements-list {
 										list-style: none;
 										padding: 0;
@@ -192,6 +197,8 @@
 
 							<!-- Menu -->
 								<nav id="menu">
+									<img class="centered-image" src="assets/POLAR.png" alt="POLAR Task Banner" height="200" width="200"/>
+
 									<header class="major">
 										<h2>Menu</h2>
 									</header>
