--- a/organizers.html
+++ b/organizers.html
@@ -5,6 +5,12 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<style>
+			.centered-image {
+				display: block; /* Makes the image a block-level element */
+				margin: 0 auto; /* Centers the block-level image horizontally */
+				}
+		</style>
 	</head>
 	<body class="is-preload">
 
@@ -448,6 +454,8 @@
 
 							<!-- Menu -->
 								<nav id="menu">
+									<img class="centered-image" src="assets/POLAR.png" alt="POLAR Task Banner" height="200" width="200"/>
+
 									<header class="major">
 										<h2>Menu</h2>
 									</header>
