--- a/announcements/index.html
+++ b/announcements/index.html
@@ -194,7 +194,7 @@
 				<!-- Sidebar -->
 					<div id="sidebar">
 						<div class="inner">
-							<img class="centered-image" src="assets/POLAR.png" alt="POLAR Task Banner" height="200" width="200"/>
+							<img class="centered-image" src="../assets/POLAR.png" alt="POLAR Task Banner" height="200" width="200"/>
 
 
 							<!-- Menu -->
