--- a/index.html
+++ b/index.html
@@ -59,7 +59,29 @@
 										<p>	
 											<strong>Languages Covered</strong> 
 											<br>
-											The task covers the following 22 languages: Amharic, Arabic, Bengali, Burmese, Chinese, English, German, Hausa, Hindi, Italian, Khmer, Nepali, Odia, Persian, Polish, Punjabi, Russian, Spanish, Swahili, Telugu, Turkish, and Urdu.
+											The task covers the following 22 languages: 
+											<a href="https://en.wikipedia.org/wiki/Amharic" target="_blank">Amharic</a>,
+											<a href="https://en.wikipedia.org/wiki/Arabic" target="_blank">Arabic</a>,
+											<a href="https://en.wikipedia.org/wiki/Bengali" target="_blank">Bengali</a>,
+											<a href="https://en.wikipedia.org/wiki/Burmese" target="_blank">Burmese</a>,
+											<a href="https://en.wikipedia.org/wiki/Chinese" target="_blank">Chinese</a>,
+											<a href="https://en.wikipedia.org/wiki/English" target="_blank">English</a>,
+											<a href="https://en.wikipedia.org/wiki/German" target="_blank">German</a>,
+											<a href="https://en.wikipedia.org/wiki/Hausa" target="_blank">Hausa</a>,
+											<a href="https://en.wikipedia.org/wiki/Hindi" target="_blank">Hindi</a>,
+											<a href="https://en.wikipedia.org/wiki/Italian" target="_blank">Italian</a>,
+											<a href="https://en.wikipedia.org/wiki/Khmer" target="_blank">Khmer</a>,
+											<a href="https://en.wikipedia.org/wiki/Nepali" target="_blank">Nepali</a>,
+											<a href="https://en.wikipedia.org/wiki/Odia" target="_blank">Odia</a>,
+											<a href="https://en.wikipedia.org/wiki/Persian" target="_blank">Persian</a>,
+											<a href="https://en.wikipedia.org/wiki/Polish" target="_blank">Polish</a>,
+											<a href="https://en.wikipedia.org/wiki/Punjabi" target="_blank">Punjabi</a>,
+											<a href="https://en.wikipedia.org/wiki/Russian" target="_blank">Russian</a>,
+											<a href="https://en.wikipedia.org/wiki/Spanish" target="_blank">Spanish</a>,
+											<a href="https://en.wikipedia.org/wiki/Swahili" target="_blank">Swahili</a>,
+											<a href="https://en.wikipedia.org/wiki/Telugu" target="_blank">Telugu</a>,
+											<a href="https://en.wikipedia.org/wiki/Turkish" target="_blank">Turkish</a>,
+											<a href="https://en.wikipedia.org/wiki/Urdu" target="_blank">Urdu</a>.
 										</p>
 										<ul class="actions actions-column">
 											<li><a href="tasks.html" class="button big">Learn More About the Subtasks</a></li>
