--- a/tasks.html
+++ b/tasks.html
@@ -91,7 +91,7 @@
 									
 										Note: Only texts that clearly reflect attitude polarization are classified as such, with consideration of the context and the overall meaning of the text, not just individual words or phrases.
 									</p>
-									<p><strong>Subtask-1: Binary classification</strong> to determine whether a post contains polarized content (Polarized or Not Polarized).</p>
+									<p><strong>Subtask-1: Binary classification:</strong> to determine whether a post contains polarized content (Polarized or Not Polarized).</p>
 
 									<div class="table-wrapper">
 										<table>
@@ -157,7 +157,7 @@
 												<li><strong>Other:</strong> polarization texts targeting other groups/identities such as economy, technology, media, polarization, etc.</li>
 											</ol>
 									</p>
-									<p><strong>Subtastk-2: Multi-label classification</strong> to identify the target of polarization as one of the following categories: Political, Racial/Ethnic, Religious, Gender/Sexual or Other.</p>
+									<p><strong>Subtastk-2: Multi-label classification:</strong> to identify the target of polarization as one of the following categories: Political, Racial/Ethnic, Religious, Gender/Sexual or Other.</p>
 
 									<div class="table-wrapper">
 										<table>
@@ -236,7 +236,7 @@
 										  </ol>
 										  
 									</p>
-									<p><strong>Multi-label classification</strong> to classify how polarization is expressed, with multiple possible labels including Stereotype, Vilification, Dehumanization, Extreme Language, Lack of Empathy", or Invalidation.</p>
+									<p><strong>Subtask-3: Multi-label classification:</strong> to classify how polarization is expressed, with multiple possible labels including Stereotype, Vilification, Dehumanization, Extreme Language, Lack of Empathy", or Invalidation.</p>
 									<p><strong>NOTE: Italian and Russian languages are not included in this subtask.</strong></p>
 									<div class="table-wrapper">
 										<table>
