--- a/announcements/subtask23start.html
+++ b/announcements/subtask23start.html
@@ -119,7 +119,7 @@
 
 							<!-- Menu -->
 								<nav id="menu">
-									<img class="centered-image" src="assets/POLAR.png" alt="POLAR Task Banner" height="200" width="200"/>
+									<img class="centered-image" src="../assets/POLAR.png" alt="POLAR Task Banner" height="200" width="200"/>
 
 									<header class="major">
 										<h2>Menu</h2>
