--- a/organizers.html
+++ b/organizers.html
@@ -206,7 +206,7 @@
 										<div class="organizer-card">
 											<div class="organizer-info">
 												<h4>Arfeen Zeeshan</h4>
-												<p>National University of Sciences and Technology (Pakistan)</p>
+												<p>Indian Institute of Technology Delhi (India)</p>
 											</div>
 										</div>
 
