--- a/dates.html
+++ b/dates.html
@@ -58,7 +58,7 @@
 												</tr>
 												<tr>
 													<td>Evaluation Start</td>
-													<td>12 January 2026</td>
+													<td>25 January 2026</td>
 												</tr>
 												<tr>
 													<td>Evaluation End</td>
@@ -94,8 +94,8 @@
 									<h3>Phase 2: Development Period (September 2025 - January 2026)</h3>
 									<p>Teams develop and refine their models using the provided training data. Participants can make up to 999 submissions during this phase with results visible only to their team.</p>
 
-									<h3>Phase 3: Evaluation Period (January 10 - February 1, 2026)</h3>
-									<p>Official evaluation phase where teams can make up to 3 submissions. Only the final submission will be considered official for ranking purposes.</p>
+									<h3>Phase 3: Evaluation Period (January 25 - February 2, 2026)</h3>
+									<p>Official evaluation phase where teams can make up to 5 submissions with total 3 submission/day. Only the final submission will be considered official for ranking purposes.</p>
 
 									<h3>Phase 4: Paper Submission (February 2026)</h3>
 									<p>Teams must submit system description papers to be included in the final ranking. Papers will undergo peer review.</p>
