Update communication guidelines and remove response times
Removed response times section and simplified technical issues guidance.

--- a/communication.html
+++ b/communication.html
@@ -83,16 +83,8 @@
 									<ul>
 										<li><strong>General questions:</strong> Use Discord for quick questions and community discussions</li>
 										<li><strong>Important announcements:</strong> Delivered via Google Groups</li>
-										<li><strong>Technical issues:</strong> Post on Discord or contact organizers directly</li>
+										<li><strong>Technical issues:</strong> Post on Discord</li>
 										<li><strong>Private concerns:</strong> Contact organizers through the organizers Google Group</li>
-									</ul>
-
-									<h2>Response Times</h2>
-									<p>We aim to respond to queries within:</p>
-									<ul>
-										<li><strong>Discord:</strong> Within 24 hours during business days</li>
-										<li><strong>Email/Google Groups:</strong> Within 48-72 hours</li>
-										<li><strong>Urgent issues:</strong> We monitor all channels regularly for time-sensitive matters</li>
 									</ul>
 
 									<div class="box">
