--- a/dates.html
+++ b/dates.html
@@ -62,23 +62,23 @@
 												</tr>
 												<tr>
 													<td>Evaluation End</td>
-													<td>2 February 2026</td>
+													<td>5 February 2026</td>
 												</tr>
 												<tr>
 													<td>System Paper Submission Deadline</td>
-													<td>February 2026</td>
+													<td>2 March 2026</td>
 												</tr>
 												<tr>
 													<td>Notification of Acceptance</td>
-													<td>March 2026</td>
+													<td>9 April 2026</td>
 												</tr>
 												<tr>
 													<td>Camera-Ready Papers Due</td>
-													<td>April 2026</td>
+													<td>30 April 2026</td>
 												</tr>
 												<tr>
-													<td>SemEval-2026 Workshop at [Conference Location TBD]</td>
-													<td>Summer 2026</td>
+													<td>SemEval-2026 Workshop - [co-located with ACL 2026]</td>
+													<td>July 2026</td>
 												</tr>
 											</tbody>
 										</table>
