--- a/dates.html
+++ b/dates.html
@@ -56,11 +56,11 @@
 													<td>Training data ready</td>
 													<td>10 September 2025</td>
 												</tr>
-												<tr>
+												<tr style="text-decoration: line-through;">
 													<td>Evaluation Start</td>
 													<td>25 January 2026</td>
 												</tr>
-												<tr>
+												<tr style="text-decoration: line-through;">
 													<td>Evaluation End</td>
 													<td>5 February 2026</td>
 												</tr>
